# ros2_ws_for_students

m2wr_description/: CMakeLists.txt  package.xml
m2wr_description/config/: plotConfig.xml  rviz_config.rviz
m2wr_description/launch/: gazebo.launch.py  rviz.launch.py  spawn.launch.py
m2wr_description/urdf/: gazebo_control.xacro  lidar.xacro  robot_core.xacro
m2wr_description/worlds/: maze.world
m2wr_twist/: CMakeLists.txt  package.xml
m2wr_twist/src/: dummy_subs.cpp  get_odom.cpp  m2wr_twist.cpp  parse_lidar.cpp  tr_without_fb.cpp
spherorobot_cpp/: CMakeLists.txt  package.xml
spherorobot_cpp/config/: joint_names_spherorobot_v2.yaml
spherorobot_cpp/launch/: gazebo.launch.py  platform_controller.launch.py  rsp.launch.py  sphero_controller.launch.py  sphero_platform_spawn.launch.py
spherorobot_cpp/meshes/: base_link.STL  shaft_link.STL  sphere_link.STL
spherorobot_cpp/plugins/: pendulum_drive_plugin.cpp
spherorobot_cpp/src/: platform_control.cpp  sphero_control.cpp
spherorobot_cpp/urdf/: spherorobot_v5_1.urdf  vibro_table.urdf
test_cpp_pkg/: CMakeLists.txt  package.xml
test_cpp_pkg/launch/: pubsub_launch.py
test_cpp_pkg/src/: myPublisher.cpp  mySubscriber.cpp
